Actions
Bug #11401
closedoamuser: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
vgname.c: In function 'valid_gname': vgname.c:57:19: error: comparison between pointer and integer [-Werror] for (c = *ptr; c != NULL; ptr++, c = *ptr) { ^~ vlogin.c: In function 'valid_login': vlogin.c:65:11: error: comparison between pointer and integer [-Werror] for (; c != NULL; ptr++, c = *ptr) { ^~ vproj.c: In function 'valid_project': vproj.c:59:27: error: comparison between pointer and integer [-Werror] for (ptr = project; *ptr != NULL; ptr++) { ^~ vprojname.c: In function 'valid_projname': vprojname.c:56:19: error: comparison between pointer and integer [-Werror] for (c = *ptr; c != NULL; ptr++, c = *ptr) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 7d7f5f75fd52caf35a918c4609de239a64d1fbd6
commit 7d7f5f75fd52caf35a918c4609de239a64d1fbd6 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-26T05:13:46.000Z 11401 oamuser: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions